testsuite/poke.pkl/printf-diag-26.pk
/* { dg-do compile } */

printf ("%f64x", 1U); /* { dg-error "" } */
